add picture on homepage and change overall theme to llightpurple

--- a/BPHI.html
+++ b/BPHI.html
@@ -128,11 +128,7 @@
                <span>Wakil Ketua Internal</span>
               </div> 
          </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-slide slide">
       <div class="image">
          <img src="images/gilbert2.png" style="width: 500px;" alt="">
@@ -145,11 +141,7 @@
          <span>Wakil Ketua Eksternal</span>
         </div> 
    </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-slide slide">
       <div class="image">
          <img src="images/arvel2.png" style="width: 500px;" alt="">
@@ -162,11 +154,6 @@
          <span>Sekretaris Umum</span>
         </div> 
    </div>
-</section>
-
-<section class="team">
-   <h1 class="heading"></h1>
-   
 
    <div class="swiper-slide slide">
       <div class="image">
@@ -180,9 +167,16 @@
          <span>Bendahara Umum</span>
         </div> 
       </div>
-   </div>
+   <div class="swiper-button-next"></div>
+   <div class="swiper-button-prev"></div>
 </div>
 </section>
+
+    <!-- swiper js link  -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- custom js -->
+    <script src="swiper.js"></script>
 <!-- teachers section starts  -->
 
 <!-- <section class="teachers"> -->
