--- a/HUMAS.html
+++ b/HUMAS.html
@@ -31,7 +31,7 @@
       <div class="container nav__container">
          <a href="#" class="logo"> <img src="images/logo.png" width="140px"></i> </a>
          <ul class="nav__menu">
-            <li><a href="home.html">Beranda</a></li>
+            <li><a href="index.html">Beranda</a></li>
             <li><a class="atas" href="profil.html">Tentang Kami</a>
                <ul>
                   <li><a class="bawah" href="profil.html">Profil</a></li>
@@ -141,13 +141,7 @@
                <span>Anggota Hubungan Masyrakat</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -162,13 +156,7 @@
                <span>Anggota Hubungan Masyrakat</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -183,13 +171,7 @@
                <span>Anggota Hubungan Masyarakat</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -204,9 +186,16 @@
                <span>Anggota Hubungan Masyarakat</span>
               </div> 
          </div>
-      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
    </div>
 </section>
+
+    <!-- swiper js link  -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- custom js -->
+    <script src="swiper.js"></script>
 <!-- teachers section ends -->
 <!-------------------------------------------------------------------->
 <!-- footer section starts  -->
@@ -237,7 +226,7 @@
 
       <div class="box">
          <h3>useful links</h3>
-         <a href="home.html" class="link">Beranda</a>
+         <a href="index.html" class="link">Beranda</a>
          <a href="profil.html" class="link">Tentang Kami</a>
          <a href="Proker.html" class="link">Program Kerja</a>
          <a href="Medpart.html" class="link">Official Partner</a>
