--- a/MEDIN.html
+++ b/MEDIN.html
@@ -141,13 +141,7 @@
                <span>Anggota Media Informasi</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -162,13 +156,7 @@
                <span>Anggota Media Informasi</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -183,13 +171,7 @@
                <span>Anggota Media Informasi</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -204,9 +186,16 @@
                <span>Anggota Media Informasi</span>
               </div> 
          </div>
-      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
    </div>
 </section>
+
+    <!-- swiper js link  -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- custom js -->
+    <script src="swiper.js"></script>
 <!-------------------------------------------------------------------------------->
 <!-- footer section starts  -->
 
