--- a/PENGMAS.html
+++ b/PENGMAS.html
@@ -142,16 +142,8 @@
                <span>Anggota Pengabdian Masyarakat</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
-   <div class="swiper-team-slider">
-      <div class="swiper-wrapper">
-         <div class="swiper-slide slide">
+      <div class="swiper-slide slide">
             <div class="image">
                <img src="images/Raditya Rizky .png" style="width: 500px;" alt="">
                <div class="share">
@@ -163,15 +155,7 @@
                <span>Anggota Pengabdian Masyarakat</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
-   <div class="swiper-team-slider">
-      <div class="swiper-wrapper">
          <div class="swiper-slide slide">
             <div class="image">
                <img src="images/miguel.png" style="width: 500px;" alt="">
@@ -184,15 +168,7 @@
                <span>Anggota Pengabdian Masyarakat</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
-   <div class="swiper-team-slider">
-      <div class="swiper-wrapper">
          <div class="swiper-slide slide">
             <div class="image">
                <img src="images/Kevin Adhi.png" style="width: 500px;" alt="">
@@ -205,9 +181,16 @@
                <span>Anggota Pengabdian Masyarakat</span>
               </div> 
          </div>
-      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
    </div>
 </section>
+
+    <!-- swiper js link  -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- custom js -->
+    <script src="swiper.js"></script>
 <!--------------------------------------------------------------------------->
 <!-------------------------------------------------------------------------------->
 <!-- footer section starts  -->
