--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
       </div>
    </section>
 
+<div style="margin-top: 80px; padding: 0 12%; background-color: #Fdf7ff;">
+   <img src="images/bem_all.JPG" style="width: 100%; height:750px" srcset="">
+</div>
+
+
    <!-- embed video start  -->
    <section class="videoatas">
       <h1 class="heading">Apa Itu BEM FTI UNTAR?</h1>
