--- a/BAKMIN.html
+++ b/BAKMIN.html
@@ -140,13 +140,7 @@
                <span>Anggota Bakat Minat dan Akademik</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -161,13 +155,7 @@
                <span>Anggota Bakat Minat dan Akademik</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -182,13 +170,7 @@
                <span>Anggota Bakat Minat dan Akademik</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -203,13 +185,7 @@
                <span>Anggota Bakat Minat dan Akademik</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -224,10 +200,16 @@
                <span>Anggota Bakat Minat dan Akademik</span>
               </div> 
          </div>
-      </div>
+         <div class="swiper-button-next"></div>
+         <div class="swiper-button-prev"></div>
    </div>
 </section>
 
+    <!-- swiper js link  -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- custom js -->
+    <script src="swiper.js"></script>
 <!-- footer section starts  -->
 
 <section class="footer" id="foot">
