--- a/KESEKRETARIATAN.html
+++ b/KESEKRETARIATAN.html
@@ -145,13 +145,7 @@
                <span>Anggota Kesekretariatan</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -166,13 +160,7 @@
                <span>Anggota Kesekretariatan</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -187,13 +175,7 @@
                <span>Anggota Kesekretariatan</span>
               </div> 
          </div>
-      </div>
-   </div>
-</section>
 
-<section class="team">
-   <h1 class="heading"></h1>
-   
    <div class="swiper-team-slider">
       <div class="swiper-wrapper">
          <div class="swiper-slide slide">
@@ -208,9 +190,16 @@
                <span>Anggota Kesekretariatan</span>
               </div> 
          </div>
-      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
    </div>
 </section>
+
+    <!-- swiper js link  -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- custom js -->
+    <script src="swiper.js"></script>
 <!-------------------------------------------------------------------->
 <!-- footer section starts  -->
 
