--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
    </section>
 
-<div style="margin-top: 80px; padding: 0 12%; background-color: #Fdf7ff;">
+<div style="margin-top: 80px; padding: 5% 12%; background-color: #Fdf7ff;">
    <img src="images/bem_all.JPG" style="width: 100%; height:750px" srcset="">
 </div>
 
